--- a/nginxConfig/back/myNginx.conf
+++ b/nginxConfig/back/myNginx.conf
@@ -53,6 +53,12 @@ http{
             proxy_pass http://back_server;
         }
 
+        # pass 异常监控
+        location /ams/ {
+            proxy_set_header Host $host:$server_port;
+            proxy_pass http://back_server;
+        }
+
          access_log /usr/local/etc/nginx/log/front-end.log compression;
 	}
 
